--- a/Alura.CoisasAFazer.Testes/Alura.CoisasAFazer.Testes.csproj
+++ b/Alura.CoisasAFazer.Testes/Alura.CoisasAFazer.Testes.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\src\Alura.CoisasAFazer.Core\Alura.CoisasAFazer.Core.csproj" />
     <ProjectReference Include="..\src\Alura.CoisasAFazer.Services\Alura.CoisasAFazer.Services.csproj" />
+    <ProjectReference Include="..\src\Alura.CoisasAFazer.WebApp\Alura.CoisasAFazer.WebApp.csproj" />
   </ItemGroup>
 
 </Project>
